--- a/index.html
+++ b/index.html
@@ -67,11 +67,9 @@
   <img src="assets/images/background.png" alt="background">
   <!-- End of Background -->
 
-  <!-- Container  -->
-  <!-- <img src="assets/images/background.png" alt="Snow"> -->
+  <!-- Container Button Start -->
   <div class="container">
     <a href="second-page.html"><button class="btn start">START</button></a>
-
   </div>
   <!-- End of Container Background -->
 
